k8s/backend/flask-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: flask-app
            port:
              number: 80
        path: /api(/|$)(.*)
        pathType: ImplementationSpecific
