k8s/backend/flask-app-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-app-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: "/api"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: flask-app
        port:
          number: 80
